# mockafka-py

./: .coveragerc  .gitignore  .readthedocs.yml  404.html  LICENSE  MakeFile  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: ci-mkdocs.yml  codeql.yml  publish.yml  python-app.yml  python-publish.yml
async-decorators/: index.html
async-fake-aiokafka-admin-client/: index.html
async-fake-aiokafka-consumer/: index.html
async-fake-aiokafka-produce/: index.html
decorators/: index.html
docs/: async-decorators.md  async-fake-aiokafka-admin-client.md  async-fake-aiokafka-consumer.md  async-fake-aiokafka-produce.md  decorators.md  fake_admin_client.md  fake_consumer.md  fake_produce.md  index.md  kafka-store.md  kafka_store.md  requirements.txt
fake-admin-client/: index.html
fake-consumer/: index.html
fake-produce/: index.html
kafka-store/: index.html
mockafka/: __init__.py  admin_client.py  broker_metadata.py  cluster_metadata.py  constants.py  consumer.py  conumser.py  exceptions.py  kafka_store.py  message.py  partition_metadata.py  producer.py  store.py  topic_metadata.py
mockafka/aiokafka/: __init__.py  aiokafka_admin_client.py  aiokafka_consumer.py  aiokafka_producer.py  new_topic.py
mockafka/decorators/: __init__.py  aconsumer.py  aproducer.py  asetup_kafka.py  bulk_producer.py  consumer.py  producer.py  setup_kafka.py  typing.py
observers/: admin_client.py  conumser.py  main.py  mockafka1.py  producer.py
search/: search_index.json
tests/: test_admin_client.py  test_async_mockafka.py  test_cluster_metadata.py  test_constants.py  test_consumer.py  test_consumer_consistency.py  test_docrators.py  test_kafka_store.py  test_mockafka.py  test_producer.py  test_pytest_decorators.py  test_pytest_fixture_issue.py
tests/test_aiokafka/: test_aiokafka_consumer.py  test_aiokafka_producer.py  test_async_decorators.py  test_fake_aiokafka_admin_client.py
