[tool.poetry]
name = "mockafka-py"
version = "0.1.58"
authors = ["alm0ra <ali.mrd318@gmail.com>"]
repository = "https://github.com/alm0ra/mockafka-py"
documentation = "https://github.com/alm0ra/mockafka-py/docs"


description = "A mock library for confluent kafka"
readme = "README.md"
packages = [{ include = "mockafka" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
confluent-kafka = ">= 1.9.2"
aiokafka = "^0.10.0"
pytest-cov = ">=4.1,<6.0"
pytest-asyncio = "^0.23.5"
parameterized = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2,<9.0"
pytest-cov = ">=4,<6"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = { extras = ["python"], version = ">=0.23,<0.25" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
