[tool.poetry]
name = "mockafka-py"
version = "0.2.0"
authors = ["alm0ra <ali.mrd318@gmail.com>"]
repository = "https://github.com/alm0ra/mockafka-py"
documentation = "https://mockafka-py.readthedocs.io/"


description = "A mock library for confluent kafka"
readme = "README.md"
packages = [{ include = "mockafka" }]
classifiers = [
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
confluent-kafka = ">= 1.9.2"
aiokafka = ">=0.10,<0.12"
typing-extensions = "^4.12.2"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-isort = "*"
flake8-noqa = "*"
flake8-tuple = "*"
parameterized = "^0.9.0"
pytest = ">=7.2,<9.0"
pytest-cov = ">=4,<6"
pytest-asyncio = "^0.23.5"
mypy = "^1.5.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = { extras = ["python"], version = ">=0.23,<0.27" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
float_to_top = true

[tool.mypy]
warn_unused_ignores = true

no_implicit_optional = true

disallow_subclassing_any = true

enable_error_code = "ignore-without-code"
